k8s/production/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: margaret
    pod: api

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: margaret
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: margaret
      tier: api
  template:
    metadata:
      labels:
        app: margaret
        tier: api
    spec:
      containers:
      - name: api
        image: mrgaret/api:latest
