k8s/production/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: margaret
    tier: web

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: margaret
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: margaret
      pod: web
  template:
    metadata:
      labels:
        app: margaret
        tier: web
    spec:
      containers:
      - name: web
        image: mrgaret/web:latest
