k8s/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: margaret-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: api.margaret.com
    http:
      paths:
      - path: /
        backend:
          serviceName: api-service
          servicePort: 80
  - host: margaret.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
